fix(panels): Reduce body spacing, update filter examples to use close button (#3291)

--- a/ui/components/panels/base/_index.scss
+++ b/ui/components/panels/base/_index.scss
@@ -80,7 +80,7 @@
  * @restrict .slds-panel div
  */
 .slds-panel__body {
-  padding: $spacing-medium;
+  padding: $spacing-small;
 }
 
 /**
